2003-02-18  David Bateman <dbateman@free.fr>

	* DLD-FUNCTIONS/lu.cc (Flu): Allow non-square matrices.

2003-02-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (read_binary_file_header, do_load, do_save,
	write_header): No longer static.
	(load_save_format): Move enum decl to load-save.h.

2003-02-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stdstrm.h, oct-stdstrm.cc (octave_base_stdiostream,
	octave_iostdiostream, octave_istdiostram, octave_ostdiostream):
	Combine all functionality into one class, octave_stdiostream.
	Change all uses.	

	* file-io.cc (Ftmpfile, Fmkstemp): New functions.
	* oct-stdstrm.h (octave_iostdiostream): New class.
	(octave_istdiostream::octave_istdiostream,
	octave_istdiostream::create,
	octave_ostdiostream::octave_ostdiostream, octave_ostdiostream::create, 
	octave_iostdiostream::octave_iostdiostream,
	octave_iostdiostream::create): Make close function the last arg.
	Change all uses.

	* c-file-ptr-stream.h (io_c_file_ptr_stream): New class.

2003-02-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.cc (maximum_braindamage): Set boolean built-in variables
	to true and false instead of 1.0 and 0.0.
	(octave_main): Likewise.
	* error.cc (Fwarning): Likewise.

	* pager.cc (Fmore): Make the no-arg case work too.

	* ov-str-mat.h (octave_char_matrix_str::is_real_type, 
	octave_char_matrix_str::is_matrix_type,
	octave_char_matrix_str::is_numeric_type): Always return false.

2003-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l (<CCHAR>): If we are parsing a command, reset start state.
	Use BEGIN (INITIAL) instead of BEGIN 0.  Use parens around start
	state in BEGIN statements.

2003-02-13  Paul Kienzle <pkienzle@users.sf.net>

	* variables.cc (Fmlock, Fmunlock, Fmislocked): New functions.

	* variables.cc (mlock, munlock, mislocked): New functions.
	* variables.h: Provide decls.

	* symtab.h (symbol_record::unmark_static): New function.

2003-02-12  John W. Eaton  <jwe@bevo.che.wisc.edu>
